--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@strapi/plugin-users-permissions": "4.25.0",
     "@strapi/strapi": "^4.24.5",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.12.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-neon-tech-db-branches": "^0.1.18",
     "stripe": "^15.11.0",
     "styled-components": "5.3.3"
   },
